Fixed bug #47937 (system() calls sapi_flush() regardless of output buffering)